@@ -1,3 +1,4 @@
+	* fix set_naem() on file_storage actually affecting save paths
 	* fix large file support issue on mingw
 	* add some error handling to set_piece_hashes()
 	* fix completed-on timestamp to not be clobbered on each startup
